# genai4humanities-wk14

./: .gitignore  1_rag.ipynb  1_week14_rag.ipynb  2_llm_function_calling.ipynb  2_week14_llm_function_calling.ipynb  README.md  app.py  chat_types.py  main.py  pyproject.toml  requirements.txt  tool_types.py  utils.py  week14.ipynb  week14_zh.ipynb
data/dataset_processed/: data-00000-of-00001.arrow  dataset_info.json  state.json
data/lance_db/movies.lance/_indices/fts/: .managed.json  meta.json
data/lance_db/movies.lance/_transactions/: 0-2633430e-ce26-4309-84a7-497349672029.txn  0-a7fa024e-fae3-4f1a-8836-e7527eff6bb7.txn  1-69bbd768-1d45-4946-9813-a041b5547dc0.txn
data/lance_db/movies.lance/data/: 468749c6-ce0d-4c72-8cc8-c3a143c38d1c.lance  7ce1d6e0-b72e-4494-985d-59e8960412b3.lance  85fbfa44-3cd8-4ed7-9824-d517d8ed1511.lance
notebooks/: week14.ipynb
