[project]
name = "genai4humanities-wk14"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.6.0",
    "hf-transfer>=0.1.9",
    "hf-xet>=1.1.2",
    "huggingface-hub[inference]>=0.31.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "lancedb>=0.22.0",
    "loguru>=0.7.3",
    "openai>=1.79.0",
    "pandas>=2.2.3",
    "pydantic>=2.11.4",
    "pylance>=0.27.2",
    "python-dotenv>=1.1.0",
    "sentence-transformers>=4.1.0",
    "tantivy>=0.24.0",
    "tenacity>=9.1.2",
    "tiktoken>=0.9.0",
]
